# test_task_DIDENOK-TEAM

./: LICENSE  README.md  pyproject.toml
config/: settings.py  urls.py
passwords_storage/: apps.py  models.py  serializers.py  urls.py  views.py
passwords_storage/migrations/: 0001_initial.py  0002_passwordentry_delete_password.py
passwords_storage/services/: encryption_service.py  password_service.py
